--- a/Nuno Theme Starter Files/style.css
+++ b/Nuno Theme Starter Files/style.css
@@ -174,6 +174,78 @@ h3.heading {
     border-radius: 50%;
 }
 
+blockquote .svg-inline--fa {
+    color: #1ebba3;
+    margin: 1rem;
+}
+
+.clients-hr {
+    border-top: .05rem solid #1ebba3;
+}
+
+/*-----Contact Section--------*/
+
+footer {
+    background-color: #40474e;
+    color: white;
+    padding: 2rem 0 2rem;
+    margin-top: 1rem;
+}
+
+footer img {
+    height: 3rem;
+    margin: 1.5rem 0;
+}
+
+footer a {
+    color: white;
+}
+
+footer svg.svg-inline--fa {
+    font-size: 1.6rem;
+    margin: 1.2rem .5rem 0 0;
+}
+
+footer svg.svg-inline--fa:hover {
+    color: #1ebba3!important;
+}
+
+hr.socket {
+    width: 100%;
+    border-top: .2rem solid #666b71;
+    margin-top: 3rem;
+}
+
+/*-----Media Queries--------*/
+
+@media (max-width: 767px) {
+.caption h1 {
+    font-size: 2.3rem;
+    letter-spacing: .15rem;
+    padding-bottom: .5rem;
+}
+
+.caption h3 {
+    font-size: 1.2rem;
+    padding-bottom: 1.2rem;
+}
+
+.btn-lg {   
+    padding: .5rem 1rem;
+    font-size: 1rem;
+}
+.narrow h1 {
+    font-size: 1.5rem;
+}
+.clients img {
+    max-width: 50%;
+    display: block;
+    margin: 0 auto;
+}
+}
+
+
+
 
 
 
